--- a/index.html
+++ b/index.html
@@ -30,43 +30,9 @@
         At odit sint voluptatem? Minus earum libero dolore beatae consequatur fugiat eligendi itaque, odit ullam
         voluptas natus, similique possimus rem eius totam. Esse, corporis! Iusto tenetur repellendus voluptate quas
         nisi?
-        Eligendi, accusamus libero? Provident eveniet dicta repudiandae est esse inventore beatae optio alias
-        consequuntur aliquid! Odio possimus, quae enim eius non quod laboriosam animi a atque sapiente ad omnis rem.
-        Expedita eum perspiciatis asperiores enim veritatis sed? Voluptatem facere saepe tenetur iusto blanditiis illo
-        expedita, quo optio quisquam obcaecati distinctio et itaque maiores doloremque quae maxime provident cum ut.
-        Rerum!
-        Perferendis ab facilis neque suscipit odio, culpa reprehenderit molestiae consequuntur reiciendis. Eaque labore
-        atque consequuntur numquam sapiente, eveniet minima sint quaerat incidunt hic dolor at magnam tempore,
-        voluptatibus ab cupiditate.
-        Illo eaque nisi laborum corrupti distinctio deleniti aliquid recusandae reiciendis mollitia alias! Fugiat ipsa
-        eum labore veniam molestiae adipisci tenetur. Sunt, sapiente! Molestiae odio est esse facilis repudiandae,
-        fugiat ratione.
-        Tempore ea possimus suscipit facere libero officiis expedita fuga aliquid dicta, debitis cumque porro eaque
-        voluptatibus error, nesciunt labore officia commodi. Minus deleniti fugit voluptatum quidem expedita sit placeat
-        tempora?
-        Accusantium quas iusto fugiat iste maxime, odio quasi minima, a, eaque ullam illum nulla at culpa earum
-        recusandae obcaecati nihil voluptates tempore aut dolores similique reiciendis ipsum? Dicta, blanditiis quasi.
-        Fugiat recusandae quo libero dolor earum a optio quae! Reprehenderit modi ea esse beatae impedit facilis eius
-        excepturi, deserunt cumque numquam ut quaerat, perspiciatis et debitis nulla! Nisi, eaque. Mollitia.
-        Vero enim aut dicta facere, architecto eveniet saepe ipsam, eius sapiente corrupti, nemo voluptas culpa!
-        Repellat, aspernatur delectus odio voluptates nihil quam tempora explicabo impedit deserunt. Quo pariatur
-        explicabo labore?
-        Alias nulla fugiat consequuntur laboriosam! Esse, distinctio, dolore laudantium maiores sint labore quod
-        delectus ullam, aliquam nulla non amet. Adipisci ullam a rerum reiciendis culpa magni alias doloribus quae
-        deleniti.
-        Nobis animi delectus aliquam beatae at possimus exercitationem numquam fugit totam sit. Atque magnam dolore
-        suscipit quis architecto consequatur in blanditiis! Sapiente architecto atque magni quas exercitationem.
-        Ducimus, aliquam explicabo!
-        Fugit numquam repellendus porro magnam velit fugiat doloribus. Recusandae illo reprehenderit voluptate
-        veritatis, odit expedita eaque, rem ducimus iure modi ipsa optio, tempora placeat iste aut impedit et
-        accusantium dicta.
-        Rerum suscipit ex reprehenderit cum, velit quaerat accusantium pariatur nihil et tempora perspiciatis dolore
-        magni nisi itaque officia corrupti at excepturi! Distinctio voluptas perspiciatis quod quidem et modi
-        repudiandae exercitationem.
-        Delectus exercitationem, ducimus totam modi minus error perspiciatis officia explicabo dolores beatae. Quibusdam
-        ea aperiam, voluptatem ex aut similique quia ducimus. Culpa iure dicta numquam magni voluptates ex quam nemo!
-        Omnis earum, et dicta nesciunt ad sit eius modi praesentium, a asperiores molestiae similique hic dolorum rerum
-        rem error excepturi eos non, corrupti tempora harum adipisci reiciendis debitis? Eaque</p>
+        Pe reiciendis debitis? Eaque</p>
+
+        <h1>Et voila donc le travaille</h1>
 </body>
 
 </html>
