Ajout de la page Cours

--- a/Apropos.html
+++ b/Apropos.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
+    <title>A propos</title>
 </head>
 
 <body>
     <ul>
         <li><a href="index.html">Accueil</a></li>
+        <li><a href="cours.html">Cours</a></li>
         <li><a href="#">A propos</a></li>
     </ul>
     <p>Nous sommes dans la page à propos </p>
