--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <ul>
         <li><a href="#">Accueil</a></li>
+        <li><a href="cours.html">Cours</a></li>
         <li><a href="Apropos.html">A propos</a></li>
     </ul>
     <p>Nous sommes dans la page d'accueil</p>
